runFormatTest(import.meta, ["markdown"], {
  proseWrap: "always",
  plugins: ["prettier-plugin-toml"]
 });
